Blender crash when using Edit mode for Ocean #69363

Closed
opened 2019-08-31 18:39:17 +02:00 by cosquer · 13 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.82

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
Blender crash when using Edit mode for Ocean

Exact steps for others to reproduce the error

ship floating07bug.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.82 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** Blender crash when using Edit mode for Ocean **Exact steps for others to reproduce the error** [ship floating07bug.blend](https://archive.blender.org/developer/F7712118/ship_floating07bug.blend)
Author

Added subscriber: @jakez27

Added subscriber: @jakez27
Author

Under 2.79 the file run .
I tried many times under 2.80

Under 2.79 the file run . I tried many times under 2.80

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

I can confirm. Doesn't crash when both windows are in Solid mode.

Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15

Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-08-31 11:22, hash: 82ef1edce4

I can confirm. Doesn't crash when both windows are in Solid mode. Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15 Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-08-31 11:22, hash: `82ef1edce4`
Philipp Oeser changed title from Blender crash to Blender crash when using Edit mode for Ocean 2019-08-31 23:31:47 +02:00

Added subscriber: @AbidMaqbool

Added subscriber: @AbidMaqbool

error on crashing:

Error	: EXCEPTION_ACCESS_VIOLATION
Address	: 0x00007FF79E9C8EA3
Module	: C:\Users\MaqboolStudio-PC\Downloads\Compressed\blender-2.81-883706395ee3-win64\blender-2.81.0-git.883706395ee3-windows64\blender.exe

Note: Seems, material causes crash (when remove no crash):
image.png

**error** on crashing: ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF79E9C8EA3 Module : C:\Users\MaqboolStudio-PC\Downloads\Compressed\blender-2.81-883706395ee3-win64\blender-2.81.0-git.883706395ee3-windows64\blender.exe ``` **Note:** Seems, **material causes crash** (when remove **no crash**): ![image.png](https://archive.blender.org/developer/F7712755/image.png)

Hum! Attribute dp_wetmap causing crash...
image.png
Can't find attribute, on other place, maybe cause of crash...
Note: If you remove text dp_wetmap, no crash at all
Ship Floating - Without Attribute.blend
Thanks

Hum! Attribute **dp_wetmap** causing crash... ![image.png](https://archive.blender.org/developer/F7712761/image.png) **Can't find attribute**, on other place, **maybe** cause of crash... **Note:** If you **remove** text **dp_wetmap**, **no crash** at all [Ship Floating - Without Attribute.blend](https://archive.blender.org/developer/F7712768/Ship_Floating_-_Without_Attribute.blend) Thanks

Added subscriber: @dfelinto

Added subscriber: @dfelinto

@jakez27 thanks for the report, I have a few questions for you:

  1. Could you reproduce this from scratch in 2.80?
  2. How about a 2.79 file opened in 2.80?
  3. Which version of Blender you used to save the file the last time?

Crash related information:

BLI_assert failed: //source/blender/blenkernel/intern/customdata.c:2074, CustomData_get_layer_index_n(), at 'i + n < data->totlayer'
Full backtrace: P1107

@jakez27 thanks for the report, I have a few questions for you: 1) Could you reproduce this from scratch in 2.80? 2) How about a 2.79 file opened in 2.80? 3) Which version of Blender you used to save the file the last time? Crash related information: `BLI_assert failed: //source/blender/blenkernel/intern/customdata.c:2074, CustomData_get_layer_index_n(), at 'i + n < data->totlayer'` **Full backtrace:** [P1107](https://archive.blender.org/developer/P1107.txt)

Added subscribers: @fclem, @mont29

Added subscribers: @fclem, @mont29
Clément Foucault was assigned by Bastien Montagne 2019-10-01 21:53:43 +02:00

Think that one is for @fclem, at least as a first step? Looks like the mesh from MeshRenderData in extract_vcol_init() does not have the expected data? loop cddata only have three layers, a UV (when orig mesh has none?), a VCol (foam, generated by the Ocean modifier), and the loops themselves…

Crash itself happens just after since CustomData_get_layer_name() finds no valid layer, it returns a NULL name, and extract_vcol_init() does not take care of that case at all.

Think that one is for @fclem, at least as a first step? Looks like the mesh from `MeshRenderData` in `extract_vcol_init()` does not have the expected data? loop cddata only have three layers, a UV (when orig mesh has none?), a VCol (foam, generated by the Ocean modifier), and the loops themselves… Crash itself happens just after since `CustomData_get_layer_name()` finds no valid layer, it returns a NULL name, and `extract_vcol_init()` does not take care of that case at all.

This issue was referenced by 656228945e

This issue was referenced by 656228945ebc8be2adbf70f6fbed230e3e7f8670

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:59 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69363
No description provided.