Fix T69363 EEVEE: Blender crash when using Edit mode for Ocean

Use same Mesh* as extraction. We always use the final mesh for shaded geom.